# zheng-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  pyproject.toml
.claude/: settings.json
docs/: cross-device-github-handoff.md
docs/specs/: agent-harness-design-notes.md  agent-harness-v0.1-contract-definitions.md  agent-harness-v0.1-harness-first-architecture.md  agent-harness-v0.1-state-machine.md  agent-harness-v0.3-runtime-evolution-plan.md
examples/demo_task/: task_input.yaml  task_spec.yaml
examples/multi_step_task/: task_input.yaml  task_spec.yaml
examples/simple_task/: task_spec.yaml
src/zheng_agent/agents/: __init__.py  chat_agent.py
src/zheng_agent/agents/llm/: __init__.py  base.py  openai_agent.py  parser.py  prompts.py
src/zheng_agent/cli/: __init__.py  main.py  runtime.py
src/zheng_agent/cli/commands/: __init__.py  chat.py  pause.py  replay.py  resume.py  run.py
src/zheng_agent/core/: __init__.py
tests/: conftest.py
tests/action_gateway/: test_bootstrap.py  test_executor.py
tests/agents/llm/: test_parser.py  test_prompts.py
tests/cli/: test_loader.py
tests/contracts/: test_contract_models.py  test_schema_validator.py  test_v03_contracts.py
tests/e2e/: test_cli_e2e.py
tests/evaluation/: test_validators.py
tests/providers/: test_recovery_parity.py
tests/replay/: test_replay_cli.py  test_replayer.py
tests/runtime/: test_checkpoint_pause_resume.py  test_engine.py  test_multi_step_execution.py  test_pause_resume.py
tests/state_machine/: test_transitions.py
tests/tracing/: test_jsonl_store.py
(+34 files in other folders)
