[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zheng-agent"
version = "0.5.0"
description = "Harness-first agent execution system"
readme = "CLAUDE.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7,<3.0",
  "click>=8.0,<9.0",
  "pyyaml>=6.0,<7.0",
  "jsonschema>=4.0,<5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]
openai = [
  "openai>=1.0,<2.0",
]

[project.scripts]
zheng-agent = "zheng_agent.cli.main:cli"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]